<?xml version="1.0" encoding="UTF-8"?>

<resources>

    <!--タイトル-->
    <string name="app_name">画面部品サンプル</string>

    <!--テキストボックス-->
    <string name="tv_msg">お名前を入力してください。</string>

    <!--保存ボタン-->
    <string name="bt_save">保存</string>

    <!--注文ボタン-->
    <string name="cb_drink">ドリンク</string>
    <string name="cb_food">フード</string>

    <!--ラジオボタン-->
    <string name="rb_male">男性 </string>
    <string name="rb_female">女性 </string>

    <!--選択ボックス-->
    <string-array name="sp_curryList">
        <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマカレー</item>
        <item>グリーンカレー</item>
    </string-array>

    <!--リスト-->
    <string-array name="lv_cocktaillist">
        <item>ホワイトレディー</item>
        <item>バラライカ</item>
        <item>XYZ</item>
        <item>ニューヨーク</item>
        <item>マンハッタン</item>
        <item>ミシシッピピュール</item>
        <item>ブルーハワイ</item>
    </string-array>

</resources>
