<?xml version="1.0" encoding="utf-8"?>

<!--全体レイアウト-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A1A9BA"
    android:orientation="vertical"><!--水平揃え-->

    <!--名前入力-->
    <TextView
        android:id="@+id/tvLabelInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:text="@string/tv_msg"
        android:textSize="25sp" />

    <!--テキストボックス-->
    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:inputType="text"/>

    <!--注文ボタン-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#df7401"
        android:orientation="horizontal"
        android:weightSum="1"><!--平行揃え-->

        <!--ドリンク-->
        <CheckBox
            android:id="@+id/cbDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="0.05"
            android:background="#ffffff"
            android:text="@string/cb_drink" />
        <!--フード-->
        <CheckBox
            android:id="@+id/cbFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="0.05"
            android:background="#ffffff"
            android:text="@string/cb_food"/>
    </LinearLayout>

    <!--ラジオボタン-->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#df7401"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <!--男性ラジオボタン-->
        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0.05"
            android:background="#ffffff"
            android:text="@string/rb_male" />

        <!--女性ラジオボタン-->
        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0.05"
            android:background="#ffffff"
            android:text="@string/rb_female"/>

    </RadioGroup>

    <!--選択ボックス-->
    <Spinner
        android:id="@+id/spCurryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:entries="@array/sp_curryList"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"/>

    <!--保存ボタン-->
    <Button
        android:text="@string/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSave" />

    <!--リスト全表示-->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:entries="@array/lv_cocktaillist"/>
</LinearLayout>